boardMemberType
