# openapi.yml
@@ -37,6 +37,9 @@ tags:
   - name: boardMember
     description: >
       Creating, updating, and getting boardMembers
+  - name: boardMemberType
+    description: >
+      Creating, updating, and getting boardMemberTypes
 components:
   securitySchemes:
     BearerAuth:
@@ -342,6 +345,14 @@ components:
           $ref: "#/components/schemas/integer"
         memberId:
           $ref: "#/components/schemas/integer"
+    boardMemberType:
+      type: object
+      properties:
+        boardTitleId:
+          $ref: "#/components/schemas/integer"
+        title:
+          $ref: "#/components/schemas/string"
+
 security:
   - BearerAuth: [] 
 paths:
@@ -2208,6 +2219,151 @@ paths:
                 type: object
                 properties:
                   boardMemberId:
+                    $ref: "#/components/schemas/integer"
+        401:
+          $ref: "#/components/responses/unauthorizedError"
+        403:
+          $ref: "#/components/responses/forbiddenError"
+        404:
+          $ref: "#/components/responses/notFoundError"
+        500:
+          $ref: "#/components/responses/internalServerError"
+  
+  # boardMemberType
+  /api/boardMemberType/new:
+    post:
+      tags:
+        - boardMemberType
+      summary: Create a new boardMemberType
+      description: "This endpoint requires an `Authorization: Bearer` header with a JWT ID token."
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - title
+              additionalProperties: false
+              properties:
+                title:
+                  $ref: "#/components/schemas/string"
+      responses:
+        201:
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/boardMember"
+        400:
+          $ref: "#/components/responses/badRequestError"
+        401:
+          $ref: "#/components/responses/unauthorizedError"
+        403:
+          $ref: "#/components/responses/forbiddenError"
+        500:
+          $ref: "#/components/responses/internalServerError"
+  /api/boardMemberType/list:
+    get:
+      tags:
+        - boardMemberType
+      summary: Get all board member types
+      description: "This endpoint requires an `Authorization: Bearer` header with a JWT ID token."
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/boardMemberType"
+        400:
+          $ref: "#/components/responses/badRequestError"
+        401:
+          $ref: "#/components/responses/unauthorizedError"
+        500:
+          $ref: "#/components/responses/internalServerError"
+  /api/boardMember/{boardMemberTypeID}:
+    parameters:
+      - name: boardMemberTypeID
+        in: path
+        required: true
+        schema:
+          type: integer
+    get:
+      tags:
+        - boardMemberType
+      summary: Get this board member type
+      description: >
+        This endpoint requires an `Authorization: Bearer` header with a JWT ID token.
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/boardMemberType"
+        401:
+          $ref: "#/components/responses/unauthorizedError"
+        404:
+          $ref: "#/components/responses/notFoundError"
+        500:
+          $ref: "#/components/responses/internalServerError"
+    patch:
+      tags:
+        - boardMemberType
+      summary: Update this board member type
+      description: >
+        The request body needs only contain the fields with data to be updated.
+        If data in a field should not be updated, that field can be omitted from
+        the request body.
+        <br><br>
+        This endpoint requires an `Authorization: Bearer` header with a JWT ID token.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              minProperties: 1
+              additionalProperties: false
+              properties:
+                title:
+                  $ref: "#/components/schemas/string"
+            example:
+              title: "President"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/boardMemberType"
+        400:
+          $ref: "#/components/responses/badRequestError"
+        401:
+          $ref: "#/components/responses/unauthorizedError"
+        403:
+          $ref: "#/components/responses/forbiddenError"
+        404:
+          $ref: "#/components/responses/notFoundError"
+        500:
+          $ref: "#/components/responses/internalServerError"
+    delete:
+      tags:
+        - boardMemberType
+      summary: Delete this board member type instance
+      description: "This endpoint requires an `Authorization: Bearer` header with a JWT ID token."
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  boardMemberTypeId:
                     $ref: "#/components/schemas/integer"
         401:
           $ref: "#/components/responses/unauthorizedError"
