# src/api/api.ts
@@ -1,6 +1,8 @@
 import { Router } from 'express';
 import bike from './bike';
 import billing from './billing';
+import boardMember from './boardMember';
+import boardMemberType from './boardMemberType';
 import event from './event';
 import eventJob from './eventJob';
 import eventType from './eventType';
@@ -10,7 +12,6 @@ import member from './member';
 import membership from './membership';
 import memberType from './memberType';
 import workPoints from './workPoints';
-import boardMember from './boardMember';
 
 const api = Router();
 
@@ -26,5 +27,6 @@ api.use('/workPoints', workPoints);
 api.use('/eventJob', eventJob);
 api.use('/billing', billing);
 api.use('/boardMember', boardMember);
+api.use('/boardMemberType', boardMemberType);
 
 export default api;
